[package]
name = "cargo-count"
version = "0.2.2"
authors = ["Kevin K <kbknapp@gmail.com>"]
exclude = ["*.png"]
description = "Cargo subcommand for displaying statistics about projects, such as code, comments, and unsafe counters"
repository = "https://github.com/kbknapp/cargo-count.git"
readme = "README.md"
license = "MIT"
keywords = ["cargo", "subcommand", "statistics", "count", "lines"]

[[bin]]
name = "cargo-count"

[dependencies]
clap = "~2.0.1"
glob = "~0.2"
tabwriter = "~0.1"
regex = "~0.1"
gitignore = "~1"
ansi_term = {version = "~0.7", optional = true}
clippy    = {version = "~0.0", optional = true}

[features]
default = ["color"]
color = ["ansi_term"]
debug = []
nightly = []
lints = ["clippy", "nightly"]
unstable = []
travis = ["lints"]

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
rpath = false

[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true
rpath = false
codegen-units = 4

[profile.test]
opt-level = 1
lto = false
debug = true
debug-assertions = true
rpath = false
codegen-units = 2

[profile.bench]
opt-level = 3
lto = true
debug = false
debug-assertions = false
rpath = false
