[package]
name = "cargo-count"
version = "0.2.4"
authors = ["Kevin K <kbknapp@gmail.com>"]
exclude = ["*.png"]
description = "Cargo subcommand for displaying statistics about projects, such as code, comments, and unsafe counters"
repository = "https://github.com/kbknapp/cargo-count.git"
readme = "README.md"
license = "MIT"
keywords = ["cargo", "subcommand", "statistics", "count", "lines"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-count"

[badges]
travis-ci = {repository = "kbknapp/cargo-count"}

[dependencies]
clap = "~2.11.2"
glob = "~0.2"
tabwriter = "~0.1"
regex = "~0.1"
gitignore = "~1"
ansi_term = {version = "~0.9", optional = true}
clippy    = {version = "=0.0.88", optional = true}

[features]
default = ["color"]
color = ["ansi_term"]
debug = []
nightly = []
lints = ["clippy", "nightly"]
unstable = ["lints"]
